# Generative-AI-Projects

./: README.md
App-Navigator/: README.md  pyproject.toml
App-Navigator/app/: chain.py  config.py  database.py  embeddings.py  models.py  server.py  sql_history.py
App-Navigator/data/: corcur-app.html  propel-app.html  reward-point-app.html
App-Navigator/uploads/: d-hr-app.html
Equity-Research-Analysis/: result_from_VDB.ipynb  test_loader.ipynb
Equity-Research-Analysis/Architecture Diagram/: dirgram.drawio
Medical-Chatbot/: requirements.txt  setup.py
Medical-Chatbot/research/: trials.ipynb
Project 11-Chat-Over-RAG/: app.py  requirements.txt  store_index.py
Project 11-Chat-Over-RAG/Medical_Chatbot.egg-info/: PKG-INFO
Project 11-Chat-Over-RAG/research/: trials-chat-with-website.ipynb  trials.ipynb
Project 11-Chat-Over-RAG/src/: helper.py
Source-Code-Analysis/: app.py  requirements.txt  store_index.py  template.py
Source-Code-Analysis/db/: chroma.sqlite3
Source-Code-Analysis/research/: trials.ipynb
Source-Code-Analysis/src/: helper.py
Zomato-Chatbot/: app.py  setup.py
Zomato-Chatbot/Zomato_Chatbot.egg-info/: PKG-INFO
Zomato-Chatbot/src/: llm.py  prompt.py
